; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/common/extr_........libcommonsocket.c_ctrl_bio.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/common/extr_........libcommonsocket.c_ctrl_bio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i64, i8*)* @ctrl_bio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ctrl_bio(i32* %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %20 [
    i32 129, label %11
    i32 128, label %14
    i32 130, label %19
  ]

11:                                               ; preds = %4
  %12 = load i32*, i32** %6, align 8
  %13 = call i64 @BIO_get_shutdown(i32* %12)
  store i64 %13, i64* %5, align 8
  br label %21

14:                                               ; preds = %4
  %15 = load i32*, i32** %6, align 8
  %16 = load i64, i64* %8, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i32 @BIO_set_shutdown(i32* %15, i32 %17)
  store i64 1, i64* %5, align 8
  br label %21

19:                                               ; preds = %4
  store i64 1, i64* %5, align 8
  br label %21

20:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %21

21:                                               ; preds = %20, %19, %14, %11
  %22 = load i64, i64* %5, align 8
  ret i64 %22
}

declare dso_local i64 @BIO_get_shutdown(i32*) #1

declare dso_local i32 @BIO_set_shutdown(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
